fix expression overflow

--- a/src/sass/01-components/Display.scss
+++ b/src/sass/01-components/Display.scss
@@ -4,21 +4,27 @@
   left: 6%;
   right: 6%;
   height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   background: rgba(0,0,0, 0.8);
   box-shadow: 1px 3px 4px #0d0d0d inset;
   border: 1px solid lighten(#1e090f, 2%);
   border-width: 0px 1px 1px 0px;
   overflow: hidden;
   cursor: default;
+  align-items: flex-end;
 }
 
  #input {
       font-size: 1.8em;
-      position: relative;
       color: white;
-      top: 40%;
-      float: right;
-      bottom: 2%;
       padding: 2%;
       user-select: none;
   }
+
+  #exp {
+       font-size: 1.8em;
+       color: #404040;
+       user-select: none;
+   }
